@@ -54,6 +54,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #18882: Add threading.main_thread() function.
+
 - Issue #18901: The sunau getparams method now returns a namedtuple rather than
   a plain tuple.  Patch by Claudiu Popa.
 
